- Fix navbar right alignment right margin issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,8 @@ body {
   min-height: 2000px;
   padding-top: 70px;
 
+  ul.navbar-right{margin-right: 0px;}
+
   footer {
     margin-top: 20px;
     padding-top: 10px;
